"modified home to index.html"

--- a/Ammonia.html
+++ b/Ammonia.html
@@ -55,7 +55,7 @@
 		<h1>LABORATORY PREPARATION OF SOME SUBSTANCES</h1>
 		<nav>
 			<ul>
-				<a href="home.html" class="current">|	HOME	|	</a>
+				<a href="index.html" class="current">|	HOME	|	</a>
 				<a href="sulphurdio.html">PREPARATIONS	|	</a>
 				<a href="Chlorine.html">CHLORINE 	|</a>
 			</ul>
