--- a/Chlorine.html
+++ b/Chlorine.html
@@ -53,7 +53,7 @@
 		<h1 class="header">LABORATORY PREPARATION OF SOME SUBSTANCES</h1>
 		<nav>
 			<ul>
-				<a href="home.html" class="current">|	HOME	|	</a>
+				<a href="index.html" class="current">|	HOME	|	</a>
 				<a href="sulphurdio.html">	PREPARATIONS	|	</a>
 				<a href="Chlorine.html">	CHLORINE 	|</a>
 			</ul>
