--- a/nitrodio.html
+++ b/nitrodio.html
@@ -37,7 +37,7 @@
 		<h1>LABORATORY PREPARATION OF SOME SUBSTANCES</h1>
 <nav>
 				<ul>
-					<a href="Home.html">|	HOME	|	</a>
+					<a href="index.html">|	HOME	|	</a>
 					<a href="Laboratory preparation of some substances.html">PREPARATIONS	|	</a>
 					<a href="Chlorine.html">CHLORINE 	|</a>
 				</ul>
